tv shows listing app done

--- a/TVShowsApp/Podfile
+++ b/TVShowsApp/Podfile
@@ -8,6 +8,7 @@ target 'TVShowsApp' do
   # Pods for TVShowsApp
 
   pod 'Cosmos'
+  pod 'SDWebImage'
   
   target 'TVShowsAppTests' do
     inherit! :search_paths
